namespace/media/ciliumnetworkpolicies.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: media-default-deny-egress
  namespace: media
spec:
  endpointSelector: 
    matchExpressions:
      - key: app
        operator: In
        values:
          - flaresolverr
          - qbittorrent
          - sabnzbd
  egress:
    - toEndpoints: []
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: media-allow-egress-to-gluetun
  namespace: media
spec:
  endpointSelector: 
    matchExpressions:
      - key: app
        operator: In
        values:
          - flaresolverr
          - qbittorrent
          - sabnzbd
  egress:
    - toEndpoints:
        - matchLabels:
            app: gluetun
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
            - port: "53"
              protocol: UDP
